plugins {
    id 'java'
    id 'application'
    id('com.diffplug.spotless') version '8.1.0'
    id('com.palantir.java-format-spotless') version '2.83.0'
    id('com.palantir.java-format') version '2.83.0'
}

group = 'epox'
version = '2.0.0'
description = 'WebAOM - Web Anime-O-Matic (AniDB file identification and organization)'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

application {
	mainClass = 'epox.webaom.WebAOM'
}

repositories {
	mavenCentral()
}

// Dependency configurations for different JAR variants
configurations {
	sqliteOnly
	allDrivers
}

dependencies {
	// SQLite is always included (embedded database)
	runtimeOnly 'org.xerial:sqlite-jdbc:3.51.0.0'
	sqliteOnly 'org.xerial:sqlite-jdbc:3.51.0.0'

	// External database drivers (PostgreSQL, MySQL)
	runtimeOnly 'org.postgresql:postgresql:42.7.8'
	runtimeOnly 'com.mysql:mysql-connector-j:9.5.0'

	allDrivers 'org.xerial:sqlite-jdbc:3.51.0.0'
	allDrivers 'org.postgresql:postgresql:42.7.8'
	allDrivers 'com.mysql:mysql-connector-j:9.5.0'
}

tasks.register('generateVersionProperties') {
	doLast {
		def propsFile = file("${layout.buildDirectory.get()}/resources/main/version.properties")
		propsFile.parentFile.mkdirs()
		def props = new Properties()
		props['version'] = project.version.toString()
		props['buildDate'] = new Date().format('yyyy-MM-dd')
		propsFile.withWriter { props.store(it, null) }
	}
}

processResources.dependsOn generateVersionProperties

jar {
	manifest {
		attributes(
				'Main-Class': 'epox.webaom.WebAOM',
				'Implementation-Title': 'WebAOM',
				'Implementation-Version': version,
				'Created-By': 'epoximator',
				'Specification-Title': 'WebAOM',
				'Specification-Version': version,
				'Specification-Vendor': 'epoximator'
				)
	}

	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Lite JAR with SQLite only (smaller, for most users)
tasks.register('jarLite', Jar) {
	dependsOn classes, generateVersionProperties
	group = 'build'
	description = 'Creates a lite JAR with SQLite database only'

	archiveClassifier = 'lite'

	manifest {
		attributes(
				'Main-Class': 'epox.webaom.WebAOM',
				'Implementation-Title': 'WebAOM',
				'Implementation-Version': version,
				'Created-By': 'epoximator',
				'Specification-Title': 'WebAOM',
				'Specification-Version': version,
				'Specification-Vendor': 'epoximator'
				)
	}

	from sourceSets.main.output
	from("${layout.buildDirectory.get()}/resources/main")

	from {
		configurations.sqliteOnly.collect { it.isDirectory() ? it : zipTree(it) }
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Full JAR with all database drivers
tasks.register('jarFull', Jar) {
	dependsOn classes, generateVersionProperties
	group = 'build'
	description = 'Creates a full JAR with all database drivers (SQLite, PostgreSQL, MySQL)'

	archiveClassifier = 'full'

	manifest {
		attributes(
				'Main-Class': 'epox.webaom.WebAOM',
				'Implementation-Title': 'WebAOM',
				'Implementation-Version': version,
				'Created-By': 'epoximator',
				'Specification-Title': 'WebAOM',
				'Specification-Version': version,
				'Specification-Vendor': 'epoximator'
				)
	}

	from sourceSets.main.output
	from("${layout.buildDirectory.get()}/resources/main")

	from {
		configurations.allDrivers.collect { it.isDirectory() ? it : zipTree(it) }
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('build') {
	dependsOn jarLite, jarFull
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.compilerArgs.addAll([
		'-Xlint:unchecked',
		'-Xlint:deprecation'
	])
}

spotless {
	java {
	}
}

// Native app packaging with jpackage (requires Java 21+)
def jpackageOutputDir = layout.buildDirectory.dir('installer')
def jlinkOutputDir = layout.buildDirectory.dir('jlink')
def appName = 'WebAOM'
def appDescription = 'AniDB file identification and organization tool'
def appVendor = 'epoximator'
def appCopyright = 'Copyright 2005-2010 epoximator'

// Modules required by the application (Swing + networking + database drivers)
def requiredModules = [
	'java.base',
	'java.desktop',
	'java.logging',
	'java.naming',
	'java.net.http',
	'java.prefs',
	'java.security.jgss',
	'java.sql',
	'java.xml',
	'jdk.crypto.ec',
	'jdk.unsupported'
].join(',')

tasks.register('jlink', Exec) {
	dependsOn build
	group = 'distribution'
	description = 'Creates a minimal custom JRE using jlink'

	def outputDir = jlinkOutputDir.get().asFile

	commandLine 'jlink',
			'--add-modules', requiredModules,
			'--strip-debug',
			'--no-man-pages',
			'--no-header-files',
			'--compress', 'zip-9',
			'--output', outputDir.absolutePath

	doFirst {
		delete outputDir
		println "Creating minimal JRE with jlink..."
	}

	doLast {
		println "Custom JRE created in: ${outputDir.absolutePath}"
	}
}

tasks.register('jpackage', Exec) {
	dependsOn jarLite, jlink
	group = 'distribution'
	description = 'Creates native application package for the current platform'

	def os = System.getProperty('os.name').toLowerCase()
	def packageType = os.contains('mac') ? 'dmg' :
			os.contains('win') ? 'msi' :
			os.contains('linux') ? 'deb' : 'app-image'

	def outputDir = jpackageOutputDir.get().asFile

	def args = [
		'jpackage',
		'--input',
		"${layout.buildDirectory.get()}/libs",
		'--main-jar',
		"webaom-${version}-lite.jar",
		'--name',
		appName,
		'--app-version',
		version,
		'--description',
		appDescription,
		'--vendor',
		appVendor,
		'--copyright',
		appCopyright,
		'--type',
		packageType,
		'--runtime-image',
		jlinkOutputDir.get().asFile.absolutePath,
		'--dest',
		outputDir.absolutePath
	]

	// Platform-specific options
	if (os.contains('mac')) {
		args.addAll([
			'--mac-package-name',
			appName,
			'--mac-package-identifier',
			'epox.webaom'
		])
		def macIcon = file('src/main/resources/webaom.icns')
		if (macIcon.exists()) {
			args.addAll([
				'--icon',
				macIcon.absolutePath
			])
		}
	} else if (os.contains('win')) {
		args.addAll([
			'--win-menu',
			'--win-shortcut',
			'--win-dir-chooser'
		])
		def winIcon = file('src/main/resources/webaom.ico')
		if (winIcon.exists()) {
			args.addAll([
				'--icon',
				winIcon.absolutePath
			])
		}
	} else if (os.contains('linux')) {
		args.addAll([
			'--linux-shortcut',
			'--linux-menu-group',
			'Utility'
		])
		def linuxIcon = file('src/main/resources/webaom.png')
		if (linuxIcon.exists()) {
			args.addAll([
				'--icon',
				linuxIcon.absolutePath
			])
		}
	}

	commandLine args

	doFirst {
		// Unmount any existing WebAOM volumes to prevent hdiutil conflicts
		if (System.getProperty('os.name').toLowerCase().contains('mac')) {
			try {
				[
					'hdiutil',
					'detach',
					'/Volumes/WebAOM',
					'-force',
					'-quiet'
				].execute().waitFor()
			} catch (Exception ignored) {}
		}
		outputDir.mkdirs()
		println "Creating ${packageType} package with minimal runtime..."
	}

	doLast {
		println "Package created in: ${outputDir.absolutePath}"
	}
}

tasks.register('jpackageAppImage', Exec) {
	dependsOn jarLite, jlink
	group = 'distribution'
	description = 'Creates a portable app-image (no installer) for the current platform'

	def outputDir = jpackageOutputDir.get().asFile

	def args = [
		'jpackage',
		'--input',
		"${layout.buildDirectory.get()}/libs",
		'--main-jar',
		"webaom-${version}-lite.jar",
		'--name',
		appName,
		'--app-version',
		version,
		'--description',
		appDescription,
		'--vendor',
		appVendor,
		'--copyright',
		appCopyright,
		'--type',
		'app-image',
		'--runtime-image',
		jlinkOutputDir.get().asFile.absolutePath,
		'--dest',
		outputDir.absolutePath
	]

	def os = System.getProperty('os.name').toLowerCase()
	if (os.contains('mac')) {
		def macIcon = file('src/main/resources/webaom.icns')
		if (macIcon.exists()) {
			args.addAll([
				'--icon',
				macIcon.absolutePath
			])
		}
	} else if (os.contains('win')) {
		def winIcon = file('src/main/resources/webaom.ico')
		if (winIcon.exists()) {
			args.addAll([
				'--icon',
				winIcon.absolutePath
			])
		}
	} else if (os.contains('linux')) {
		def linuxIcon = file('src/main/resources/webaom.png')
		if (linuxIcon.exists()) {
			args.addAll([
				'--icon',
				linuxIcon.absolutePath
			])
		}
	}

	commandLine args

	doFirst {
		outputDir.mkdirs()
		println "Creating app-image with minimal runtime..."
	}

	doLast {
		println "App image created in: ${outputDir.absolutePath}"
	}
}
